# sylpheed-switch-signature

./: .gitignore  .travis.yml  COPYING  Makefile.am  NEWS  README.md  autogen.sh  configure.ac
examples/: switchsignaturesrc
macros/: common.mk  sylplugin_factory.m4
po/: POTFILES.in  ja.po  switch_signatures.pot
res/: version.rc.in
src/: Makefile.am  copying.h  switch_signatures.c  switch_signatures.h
